# Kotisatama

./: .gitignore  AGENT.md  BETA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Ideoita.md  PULL_REQUEST_TEMPLATE.md  Puhdistukset.md  README-1.md  README.md  ROADMAP-1.md  SECURITY.md  kotisatama-konsepti-1.md
.config/: whitelist-hopeakettu.json  whitelist-hyvinvointialueet.json  whitelist-lapsi.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: roadmap.md
.github/actions/parse_msrv/: action.yml
.github/workflows/: kotisatama-crawl.yml
assets/themes/Avomeri/: 123.md
assets/themes/Myrsky/: 123.md
components/kotisatama/Whitelist/: Cargo.toml
components/kotisatama/Whitelist/src/: lib.rs
components/kotisatama/report/: Cargo.toml
components/kotisatama/report/src/: lib.rs
components/kotisatama/search/: Cargo.toml
components/kotisatama/search/src/: cdn.rs  lib.rs
components/kotisatama/whitelist/: Cargo.toml
components/kotisatama/whitelist/src/: lib.rs
config/: whitelist.json  whitelist.schema.json
config/search-index/: README.md  documents.json
crawler/: README.md  crawl.js  package.json
etc/ci/scenario/: update_mitmproxy_dump.py
ports/servoshell/: Cargo.toml  kotisatama.rs  lib.rs  prefs.rs  running_app_state.rs  window.rs
ports/servoshell/desktop/: gui.rs
ports/servoshell/egl/android/: kotisatama.rs  mod.rs
python/servo/: post_build_commands.py
resources/: package-prefs.json
resources/resource_protocol/: newtab.css  newtab.html
scripts/: triage-kotisatama-data.mjs
support/android/: README.md  fetch-meilisearch.ps1  fetch-meilisearch.sh
support/android/apk/servoapp/: build.gradle.kts
support/hitrace-bencher/: runs.json
worker/report/: README.md  wrangler.toml
worker/report/src/: index.js
(+13 files in other folders)
