[package]
name = "kotisatama-report"
version = "0.1.0"
edition.workspace = true
authors = ["Ilio / Kotisatama"]
license = "MPL-2.0"
publish = false
description = "Anonymous user reports and fallback search telemetry for Kotisatama"

[lib]
name = "kotisatama_report"
path = "src/lib.rs"

[dependencies]
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ureq = { version = "2.12", features = ["json"] }
url = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
